@@ -18,7 +18,6 @@
 
 import os
 import signal
-import subprocess
 import sys
 import time
 
