@@ -41,8 +41,8 @@ class TestLocale(TestCaseWithTransport):
         self.tree = tree
 
     def test_log_C(self):
-        out, err = self.run_bzr_subprocess('--no-aliases', '--no-plugins',
-               '-q', 'log', '--log-format=long', 'tree',
+        out, err = self.run_bzr_subprocess(
+            '--no-aliases --no-plugins -q log --log-format=long tree',
                env_changes={'LANG':'C', 'BZR_PROGRESS_BAR':'none',
                             'LC_ALL':None, 'LC_CTYPE':None, 'LANGUAGE':None})
         self.assertEqual('', err)
@@ -57,8 +57,8 @@ message:
 """, out)
 
     def test_log_BOGUS(self):
-        out, err = self.run_bzr_subprocess('--no-aliases', '--no-plugins',
-               '-q', 'log', '--log-format=long', 'tree',
+        out, err = self.run_bzr_subprocess(
+            '--no-aliases --no-plugins -q log --log-format=long tree',
                env_changes={'LANG':'BOGUS', 'BZR_PROGRESS_BAR':'none',
                             'LC_ALL':None, 'LC_CTYPE':None, 'LANGUAGE':None})
         # XXX: This depends on the exact formatting of a locale.Error
